# git-reviewers

./: README.md  __main__.py  install.sh  pull_subtree.sh  reviewers.py  setup.cfg  setup.py
git_reviewers/: cli.py  reviewers.py
python_lib/: LICENSE  README.md  colls.py  func.py  shell.py
