[metadata]
name = git-reviewers
version = attr: git_reviewers.VERSION
description = Suggest reviewers for changes in git
long_description = file: README.md
keywords = git, reviewers, code review
license = MIT
author = John Nadratowski
author-email = john.nadratowski@gmail.com
home-page = https://github.com/johnnadratowski/git-reviewers
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Version Control
    Topic :: Utilities

[options]
packages =
    git_reviewers
    python_lib

[options.entry_points]
console_scripts =
    git-reviewers = git_reviewers.cli:run
